# cripto-2023

./: README.md  pyproject.toml  render.yaml
login/: admin.py  helpers.py  models.py  urls.py  views.py
login/migrations/: 0001_initial.py  0002_alter_sesion_b_alter_sesion_ga_mod_p_and_more.py  0003_alter_sesion_ga_mod_p_alter_sesion_gb_mod_p.py  0004_sesion_tunel_establecido.py  0005_sesion_h.py
login/templates/: index.html  login.html
mensajes/: admin.py  helpers.py  models.py  serializers.py  urls.py  views.py
mensajes/migrations/: 0001_initial.py  0002_mensaje_iv.py
mensajes/templates/: mensajes.html
proyecto/: settings.py  urls.py
static/: script.js
static/login/: login.js
static/mensajes/: mensajes.js
